Мелкие правки иконок, добавил иконки на большие кнопки в футере

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
   <footer class="main-footer">
     <div class="footer-top">
       <div class="container">
-        <a href="#" class="big-btn big-btn-fb"></a>
-        <a href="#" class="big-btn big-btn-tw"></a>
-        <a href="#" class="big-btn big-btn-pint"></a>
+        <a href="#" class="big-btn big-btn-fb"><i class="icon icon-facebook"></i></a>
+        <a href="#" class="big-btn big-btn-tw"><i class="icon icon-twitter"></i></a>
+        <a href="#" class="big-btn big-btn-pint"><i class="icon icon-pinterest-circled"></i></a>
       </div>
     </div>
     <div class="footer-middle">
