--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       <div class="banner"></div>
     </div>
     <main class="to-right">
-      <div class="gallery">
-        <section class="gallery-section">
+      <div class="catalog">
+        <section class="catalog-section">
           <h2>Новинки</h2>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
               <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
@@ -70,7 +70,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/ps4-uncharted4.jpg" width="250" height="235" alt="PS4 Uncharted 4 Edition">
               <h1>PS4 Uncharted&nbsp;4 Edition</h1>
@@ -80,7 +80,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/the-witcher3.jpg" width="250" height="235" alt="Ведьмак 3: Дикая охота">
               <h1>Ведьмак&nbsp;3: Дикая охота</h1>
@@ -90,9 +90,9 @@
             </a>
           </article>
         </section>
-        <section class="gallery-section">
+        <section class="catalog-section">
           <h2>Популярное</h2>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/ps4.jpg" width="250" height="235" alt="Игровая консоль PlayStation 4 500Gb Black (CUH-1108A)">
               <h1>Игровая консоль PlayStation&nbsp;4 500Gb Black (CUH-1108A)</h1>
@@ -101,7 +101,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/the-last-of-us-remastered.jpg" width="250" height="235" alt="The Last of Us: Remastered">
               <h1>The Last of&nbsp;Us: Remastered</h1>
@@ -110,7 +110,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/uncharted-collection.jpg" width="250" height="235" alt="Uncharted: Collection">
               <h1>Uncharted: Collection</h1>
@@ -120,9 +120,9 @@
             </a>
           </article>
         </section>
-        <section class="gallery-section">
+        <section class="catalog-section">
           <h2>Распродажа</h2>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/beyond-heavy-rain.jpg" width="250" height="235" alt="Коллекция: Heavy Rain, За гранью: Две души">
               <h1>Коллекция: Heavy Rain, За&nbsp;гранью: Две души</h1>
@@ -132,7 +132,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/killzone.jpg" width="250" height="235" alt="Killzone: Shadow Fall">
               <h1>Killzone: Shadow Fall</h1>
@@ -142,7 +142,7 @@
               </div>
             </a>
           </article>
-          <article class="gallery-item">
+          <article class="catalog-item">
             <a class="clearfix" href="#">
               <img src="img/battlefield4.jpg" width="250" height="235" alt="Battlefield 4. Premium Edition">
               <h1>Battlefield&nbsp;4. Premium Edition</h1>
@@ -167,7 +167,7 @@
       <div class="feed-img"><img src="img/photo-2.jpg" alt="PS4 Camera" title="PS4 Camera"></div>
       <div class="feed-img"><img src="img/photo-3.jpg" alt="PS4 Full Set" title="PS4 Full Set"></div>
       <div class="feed-img"><img src="img/photo-4.jpg" alt="PS4 Gamepad Lightning" title="PS4 Gamepad Lightning"></div>
-      <div class="feed-img"><img src="img/photo-5.jpg" alt="PS4 Disks" title="PS4 Disks"></div>
+      <div class="feed-img"><img src="img/photo-5.jpg" alt="PS4 Discs" title="PS4 Discs"></div>
       <div class="feed-img"><img src="img/photo-6.jpg" alt="PS4 20th Anniversary" title="PS4 20th Anniversary"></div>
     </aside>
   </div>
