--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </header>
-  <div class="container">
+  <sectio class="container">
     <div class="to-left">
       <nav class="main-menu">
         <h2>Меню</h2>
@@ -58,7 +58,7 @@
       <div class="banner"></div>
     </div>
     <main class="to-right">
-      <div class="catalog">
+      <section class="catalog">
         <section class="catalog-section">
           <h2>Новинки</h2>
           <article class="catalog-item">
@@ -153,7 +153,7 @@
             </a>
           </article>
         </section>
-      </div>
+      </section>
     </main>
     <aside class="brandlist">
       <img src="img/ubisoft-logo.png" alt="Ubisoft Logo" title="Ubisoft">
