--- a/shop.html
+++ b/shop.html
@@ -47,34 +47,89 @@
       </div>
       <section class="catalog">
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
+            <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
+            <div class="item-price">
+              <span class="price-current">3 490</span>
+            </div>
+          </a>
         </article>
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/ps4-uncharted4.jpg" width="250" height="235" alt="PS4 Uncharted 4 Edition">
+            <h1>PS4 Uncharted&nbsp;4 Edition</h1>
+            <div class="item-price">
+              <span class="price-current">29 990</span>
+              <span class="price-old">36 990</span>
+            </div>
+          </a>
         </article>
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/the-witcher3.jpg" width="250" height="235" alt="Ведьмак 3: Дикая охота">
+            <h1>Ведьмак&nbsp;3: Дикая охота</h1>
+            <div class="item-price">
+              <span class="price-current">1 990</span>
+            </div>
+          </a>
         </article>
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/ps4.jpg" width="250" height="235" alt="Игровая консоль PlayStation 4 500Gb Black (CUH-1108A)">
+            <h1>Игровая консоль PlayStation&nbsp;4 500Gb Black (CUH-1108A)</h1>
+            <div class="item-price">
+              <span class="price-current">24 990</span>
+            </div>
+          </a>
         </article>
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/the-last-of-us-remastered.jpg" width="250" height="235" alt="The Last of Us: Remastered">
+            <h1>The Last of&nbsp;Us: Remastered</h1>
+            <div class="item-price">
+              <span class="price-current">1 490</span>
+            </div>
+          </a>
         </article>
         <article class="catalog-item">
-          <img src="" alt="">
-          <h1></h1>
-          <div class="item-price"><span></span></div>
+          <a class="clearfix" href="#">
+            <img src="img/uncharted-collection.jpg" width="250" height="235" alt="Uncharted: Collection">
+            <h1>Uncharted: Collection</h1>
+            <div class="item-price">
+              <span class="price-current">2 990</span>
+            </div>
+          </a>
+        </article>
+        <article class="catalog-item">
+          <a class="clearfix" href="#">
+            <img src="img/beyond-heavy-rain.jpg" width="250" height="235" alt="Коллекция: Heavy Rain, За гранью: Две души">
+            <h1>Коллекция: Heavy Rain, За&nbsp;гранью: Две души</h1>
+            <div class="item-price">
+              <span class="price-current">1 990</span>
+              <span class="price-old">2 490</span>
+            </div>
+          </a>
+        </article>
+        <article class="catalog-item">
+          <a class="clearfix" href="#">
+            <img src="img/killzone.jpg" width="250" height="235" alt="Killzone: Shadow Fall">
+            <h1>Killzone: Shadow Fall</h1>
+            <div class="item-price">
+              <span class="price-current">1 490</span>
+              <span class="price-old">2 190</span>
+            </div>
+          </a>
+        </article>
+        <article class="catalog-item">
+          <a class="clearfix" href="#">
+            <img src="img/battlefield4.jpg" width="250" height="235" alt="Battlefield 4. Premium Edition">
+            <h1>Battlefield&nbsp;4. Premium Edition</h1>
+            <div class="item-price">
+              <span class="price-current">1 190</span>
+              <span class="price-old">1 790</span>
+            </div>
+          </a>
         </article>
       </section>
     </main>
