Закончена страница shop

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </header>
-  <sectio class="container">
+  <div class="container">
     <div class="to-left">
       <nav class="main-menu">
         <h2>Меню</h2>
