--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
   <header class="main-header">
     <div class="container clearfix">
       <div class="header-row clearfix">
-        <div class="index-logo to-left"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></div>
+        <div class="index-logo to-left"><a href="index.html"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></a></div>
         <div class="header-social to-right">
           <a href="#"><i class="icon icon-facebook"></i></a>
           <a href="#"><i class="icon icon-twitter"></i></a>
@@ -43,7 +43,7 @@
       <div class="breadcrumbs">
         <a href="index.html">Главная</a>
         <a href="#">Игры</a>
-        <a href="">PS4</a>
+        <a class="active" href="">PS4</a>
       </div>
       <section class="catalog">
         <article class="catalog-item">
