Закончил страницу описания товара

--- a/shop-item.html
+++ b/shop-item.html
@@ -52,51 +52,56 @@
           <figure><img src="img/products/uncharted-4-screen-2.jpg" width="120" alt="Дрейк спускается по лестнице на рынок к Салли"></figure>
           <figure><img src="img/products/uncharted-4-screen-3.jpg" width="120" alt="Дрейк едет на джипе по проселочной дороге"></figure>
         </section>
-        <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
         <div class="to-right">
+          <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
+          <div class="description-price to-left">
+            <span>3 490</span>
+          </div>
           <section class="description-short">
             <h2>Краткий обзор</h2>
             <p>У&nbsp;каждого сокровища своя цена. Вновь попав в&nbsp;опасный преступный мир, который он&nbsp;пытался покинуть, Натан Дрейк должен решить, чем он&nbsp;готов пожертвовать, чтобы спасти тех, кого любит. Присоединяйтесь к&nbsp;Дрейку, Сэму, Елене и&nbsp;Салли в&nbsp;грандиозном приключении по&nbsp;всему земному шару, сквозь заросли джунглей, шумные города и&nbsp;снежные вершины, в&nbsp;поисках утраченного сокровища.</p>
           </section>
-          <a class="btn">Купить</a>
+          <button class="btn">Добавить в корзину</button>
         </div>
         <section class="description-full">
           <h2>Подробное описание</h2>
-          <p>Внутриигровые покупки не&nbsp;обязательны</p>
-          <ul>
-            <li>1&nbsp;игрок</li>
-            <li>Сетевая игра: 2-10&nbsp;чел. Для доступа к&nbsp;онлайн мультиплееру в&nbsp;полной версии игры необходима подписка PlayStation<sup class="reg">&reg;</sup>Plus</li>
-            <li>DUALSHOCK®4 с функцией вибрации</li>
-            <li>Поддерживается дистанционное воспроизведение PAL HD 720p, 1080i, 1080p</li>
-          </ul>
-          <h3>Жанр</h3>
-          <p>Боевик, приключения</p>
-          <h3>Аудио</h3>
-          <ul>
-            <li>Русский</li>
-            <li>Английский</li>
-            <li>Польский</li>
-            <li>Турецкий</li>
-          </ul>
-          <h3>Субтитры</h3>
-          <ul>
-            <li>Немецкий</li>
-            <li>Норвежский</li>
-            <li>Финский</li>
-            <li>Шведский</li>
-            <li>Русский</li>
-            <li>Португальский</li>
-            <li>Английский</li>
-            <li>Итальянский</li>
-            <li>Французский</li>
-            <li>Испанский</li>
-            <li>Польский</li>
-            <li>Датский</li>
-            <li>Турецкий</li>
-            <li>Нидерладский</li>
-          </ul>
-          <h3>Размер</h3>
-          <p>44,3 Гб</p>
+          <div class="border">
+            <p>Внутриигровые покупки не&nbsp;обязательны</p>
+            <ul>
+              <li>1&nbsp;игрок</li>
+              <li>Сетевая игра: 2-10&nbsp;чел. Для доступа к&nbsp;онлайн мультиплееру в&nbsp;полной версии игры необходима подписка PlayStation<sup class="reg">&reg;</sup>Plus</li>
+              <li>DUALSHOCK®4 с функцией вибрации</li>
+              <li>Поддерживается дистанционное воспроизведение PAL HD 720p, 1080i, 1080p</li>
+            </ul>
+            <h3>Жанр</h3>
+            <p>Боевик, приключения</p>
+            <h3>Аудио</h3>
+            <ul>
+              <li>Русский</li>
+              <li>Английский</li>
+              <li>Польский</li>
+              <li>Турецкий</li>
+            </ul>
+            <h3>Субтитры</h3>
+            <ul>
+              <li>Немецкий</li>
+              <li>Норвежский</li>
+              <li>Финский</li>
+              <li>Шведский</li>
+              <li>Русский</li>
+              <li>Португальский</li>
+              <li>Английский</li>
+              <li>Итальянский</li>
+              <li>Французский</li>
+              <li>Испанский</li>
+              <li>Польский</li>
+              <li>Датский</li>
+              <li>Турецкий</li>
+              <li>Нидерладский</li>
+            </ul>
+            <h3>Размер</h3>
+            <p>44,3 Гб</p>
+          </div>
         </section>
       </section>
     </main>
