Подключил normalize.css

--- a/shop-item.html
+++ b/shop-item.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Uncharted 4: A Thief’s End</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800|Roboto:400,700,900,900i&subset=cyrillic" rel="stylesheet">
   <link href="css/fontello.css" rel="stylesheet">
