Готова разметка страницы контактов

--- a/contacts.html
+++ b/contacts.html
@@ -52,16 +52,156 @@
   <header class="main-header">
     <div id="map">
       <div class="container clearfix">
-      <div class="index-logo"><a href="index.html"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></a></div>
-      <div class="header-social">
-        <a href="#"><i class="icon icon-facebook"></i></a>
-        <a href="#"><i class="icon icon-twitter"></i></a>
-        <a href="#"><i class="icon icon-youtube"></i></a>
-        <a href="#"><i class="icon icon-pinterest"></i></a>
-        <a href="#"><i class="icon icon-instagram"></i></a>
+        <div class="index-logo"><a href="index.html"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></a></div>
+        <div class="header-social">
+          <a href="#"><i class="icon icon-facebook"></i></a>
+          <a href="#"><i class="icon icon-twitter"></i></a>
+          <a href="#"><i class="icon icon-youtube"></i></a>
+          <a href="#"><i class="icon icon-pinterest"></i></a>
+          <a href="#"><i class="icon icon-instagram"></i></a>
+        </div>
       </div>
     </div>
-    </div>
   </header>
+  <div class="container clearfix">
+    <div class="to-left">
+      <nav class="main-menu">
+        <h2>Меню</h2>
+        <ul>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Игровые консоли</a></li>
+          <li><a href="#">Игры</a></li>
+          <li><a href="#">Аксессуары</a></li>
+          <li><a href="#">Распродажа</a></li>
+          <li><a href="#">Блог</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="banner"></div>
+    </div>
+    <div class="to-right">
+      <main>
+        <div class="breadcrumbs">
+          <a href="index.html">Главная</a>
+          <a class="active" href="#">Контакты</a>
+        </div>
+        <form class="contact-message to-left" action="">
+          <label for="name">Ваше имя*</label>
+          <input type="text" id="name" placeholder="Сергей" required>
+          <label for="email">Ваш email</label>
+          <input type="email" id="email" plsceholder="email@domen.ru" required>
+          <label for="company">Ваша фирма</label>
+          <input type="text" id="company" placeholder="ИП Дмитриев">
+          <label for="subject">Тема обращения</label>
+          <input type="text" id="subject" placeholder="Жалоба" required>
+          <label for="message">Ваше письмо</label>
+          <textarea id="message"></textarea>
+        </form>
+        <section class="contact-address">
+          <h2>Наш адрес</h2>
+          <p>Ut interdum tristique est commodo pharetra.</p>
+          <p>Lorem Ipsum is simply dummy text of the printing and over</p>
+          <span class="contact-phone">1-900-324-9876</span>
+          <span class="contact-email">info@surfhouse.com</span>
+          <p>If you have questions about your order or need any general information our customer service team will be happy to assist you.</p>
+        </section>
+      </main>
+      <aside class="brandlist">
+        <img src="img/ubisoft-logo.png" alt="Ubisoft Logo" title="Ubisoft">
+        <img src="img/EA-logo.png" alt="EA Logo" title="EA">
+        <img src="img/nival-logo.png" alt="Nival Logo" title="Nival">
+        <img src="img/blizzard-logo.png" alt="Blizzard">
+      </aside>
+    </div>
+  </div>
+  <footer class="main-footer">
+    <div class="footer-top">
+      <div class="container">
+        <a href="#" class="big-btn big-btn-fb"><i class="icon icon-facebook"></i></a>
+        <a href="#" class="big-btn big-btn-tw"><i class="icon icon-twitter"></i></a>
+        <a href="#" class="big-btn big-btn-pint"><i class="icon icon-pinterest-circled"></i></a>
+      </div>
+    </div>
+    <div class="footer-middle">
+      <div class="container clearfix">
+        <section class="footer-column footer-menu">
+          <h2>Category</h2>
+          <ul class="menu-column">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">eshop</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">new collections</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </section>
+        <section class="footer-column footer-menu">
+          <h2>Our Account</h2>
+          <ul class="menu-column">
+            <li><a href="#">Your Account</a></li>
+            <li><a href="#">Personal information</a></li>
+            <li><a href="#">Addresses</a></li>
+            <li><a href="#">Discount</a></li>
+            <li><a href="#">Orders history</a></li>
+            <li><a href="#">Addresses</a></li>
+            <li><a href="#">Search Terms</a></li>
+          </ul>
+        </section>
+        <section class="footer-column footer-menu">
+          <h2>Our Support</h2>
+          <ul class="menu-column">
+            <li><a href="#">Site Map</a></li>
+            <li><a href="#">Search Terms</a></li>
+            <li><a href="#">Advanced Search</a></li>
+            <li><a href="#">Mobile</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Mobile</a></li>
+            <li><a href="#">Addresses</a></li>
+          </ul>
+        </section>
+        <section class="footer-column column-subscribe">
+          <h2>Newsletter</h2>
+          <p>Join thousands of&nbsp;other people subscribe to&nbsp;our news</p>
+          <form action="">
+            <input type="email" placeholder="Введите email">
+            <button type="submit">Submit</button>
+          </form>
+          <div class="pay-services">
+            <img src="img/aex.jpg" width="36" height="22" alt="aex">
+            <img src="img/mastercard.jpg" width="36" height="22" alt="mastercard">
+            <img src="img/maestro.jpg" width="36" height="22" alt="maestro">
+            <img src="img/paypal.jpg" width="36" height="22" alt="paypal">
+            <img src="img/discover.jpg" width="36" height="22" alt="discover">
+            <img src="img/visa.jpg" width="36" height="22" alt="visa">
+          </div>
+        </section>
+        <section class="footer-column column-about-us">
+          <h2>About Us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+          <div class="about-us-contact"><span>Phone:</span>
+          <span>1-999-342-9876</span></div>
+          <div class="about-us-contact"><span>e-mail:</span>
+          <span class="contact-email">info@surfhouse.com</span></div>
+        </section>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="footer-copyright to-left">
+          &copy; 2016 <span class="copyright-title">PlayStore</span>. Все права защищены
+        </div>
+        <div class="footer-social to-right">
+          <a href="#"><i class="icon icon-facebook"></i></a>
+          <a href="#"><i class="icon icon-twitter"></i></a>
+          <a href="#"><i class="icon icon-pinterest"></i></a>
+          <a href="#"><i class="icon icon-gplus"></i></a>
+          <a href="#"><i class="icon icon-tumblr"></i></a>
+          <a href="#"><i class="icon icon-instagram"></i></a>
+          <a href="#"><i class="icon icon-rss"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
