Добавил кнопку отправки сообщения

--- a/contacts.html
+++ b/contacts.html
@@ -96,6 +96,7 @@
           <input type="text" id="subject" placeholder="Жалоба" required>
           <label for="message">Ваше письмо</label>
           <textarea id="message"></textarea>
+          <button class="btn" type="submit">Отправить</button>
         </form>
         <section class="contact-address">
           <h2>Наш адрес</h2>
