Добавил класс для адреса

--- a/contacts.html
+++ b/contacts.html
@@ -98,7 +98,7 @@
           <textarea id="message"></textarea>
           <button class="btn" type="submit">Отправить</button>
         </form>
-        <section class="contact-address">
+        <section class="contact-address to-right">
           <h2>Наш адрес</h2>
           <p>Ut interdum tristique est commodo pharetra.</p>
           <p>Lorem Ipsum is simply dummy text of the printing and over</p>
